--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^1.0.2
   flutter_staggered_animations: "^1.0.0"
   shared_preferences: ^2.0.15
   lottie: ^1.3.0
+  package_info:
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -26,9 +31,11 @@ dev_dependencies:
 
 flutter:
   assets:
+    - assets/i18n/
     - assets/images/
     - assets/lottie/
     - assets/svg/
+
 
   uses-material-design: true
 
