added home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   lottie: ^1.3.0
   package_info:
   provider: ^6.0.3
+  font_awesome_flutter: ^10.1.0
+  auto_size_text: ^3.0.0
+  
 
 dev_dependencies:
   flutter_test:
