--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   provider: ^6.0.3
   font_awesome_flutter: ^10.1.0
   auto_size_text: ^3.0.0
-  
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
