--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   auto_size_text: ^3.0.0
   dio: ^4.0.6
+  cached_network_image:
+  flutter_easyrefresh: ^2.2.1
 
 dev_dependencies:
   flutter_test:
