added product detail screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   dio: ^4.0.6
   cached_network_image:
   flutter_easyrefresh: ^2.2.1
+  awesome_dialog: ^2.2.1
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
