--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_easyrefresh: ^2.2.1
   awesome_dialog: ^2.2.1
   carousel_slider: ^4.1.1
+  bottom_sheet: ^3.0.0
 
 dev_dependencies:
   flutter_test:
