--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   awesome_dialog: ^2.2.1
   carousel_slider: ^4.1.1
   bottom_sheet: ^3.0.0
+  device_info: ^2.0.3
 
 dev_dependencies:
   flutter_test:
