--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   carousel_slider: ^4.1.1
   bottom_sheet: ^3.0.0
   device_info: ^2.0.3
+  flutter_polyline_points: ^1.0.0
+
+  google_maps_flutter: ^2.1.8
+  location: ^4.4.0
+  
 
 dev_dependencies:
   flutter_test:
