--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   bottom_sheet: ^3.0.0
   device_info: ^2.0.3
   flutter_polyline_points: ^1.0.0
+  uuid: ^3.0.6
 
   google_maps_flutter: ^2.1.8
   location: ^4.4.0
