added price range search

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,5 +54,7 @@
 		<key>NSLocationAlwaysUsageDescription</key>
 		<string>Your location is required.</string>
 
-	</dict>
+		<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+</dict>
 </plist>
