--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   flutter_html: 
   pull_to_refresh: ^2.0.0
   flutter_launcher_icons: "^0.11.0"
-
+  intl: ^0.17.0
+  popover: ^0.2.7
   
   
 
